--- a/index.html
+++ b/index.html
@@ -99,11 +99,6 @@
 # Hi, I'm Eric 👋
 I'm a USC **M.S. in Computer Science** student and UCSB **B.S. in Physics (CCS, High Honors; minor in Statistics & Data Science, GPA 3.93/4.0)**. I build experimental–computational pipelines, clean data systems, and physics‑informed models — recently focusing on **larval zebrafish locomotion** and lightweight ML for analytics. I love turning messy measurements into clear, testable insights and polished visuals.
 
-- **Languages/Tools:** Python, Java, C/C++, R, MATLAB, SQL, Swift, Linux/Unix, Git/GitHub  
-- **Data/ML:** NumPy, Pandas, Matplotlib, Seaborn, scikit‑learn, TensorFlow/PyTorch  
-- **Methods:** Experimental design, image processing, tracking, statistical modeling, simulations, dashboards  
-- **Links:** [LinkedIn](https://www.linkedin.com/in/ezhu03/) · [GitHub](https://github.com/ezhu03) · [Email](mailto:ejzhu@usc.edu)
-
 I’m currently at USC (Viterbi) and previously researched in the **Streichan Lab** at UCSB as a Computational Biophysics Researcher (Dean’s Physics Fellow; Honors Senior Thesis). I also prototype playful tools — from **haptics in AR** to **wearables** — and run data‑driven club events.
 
 > *Mission:* build simple systems that stay fast, reproducible, and useful — from lab pipelines to data apps.
@@ -184,6 +179,12 @@ College of Creative Studies Honors (2021–2025)
 
 **Skills**  
 Python, Java, C/C++, R, MATLAB, SQL, Swift, HTML/CSS, LaTeX, Git/GitHub, Jupyter, Linux/Unix; NumPy, Pandas, Matplotlib, Seaborn, scikit‑learn, TensorFlow/PyTorch; Neural Networks; Data Analysis & Visualization; Image Processing; Experimental Design; Microscopy.
+
+**Technical Overview**  
+- **Languages/Tools:** Python, Java, C/C++, R, MATLAB, SQL, Swift, Linux/Unix, Git/GitHub  
+- **Data/ML:** NumPy, Pandas, Matplotlib, Seaborn, scikit‑learn, TensorFlow/PyTorch  
+- **Methods:** Experimental design, image processing, tracking, statistical modeling, simulations, dashboards  
+- **Links:** [LinkedIn](https://www.linkedin.com/in/ezhu03/) · [GitHub](https://github.com/ezhu03) · [Email](mailto:ejzhu@usc.edu)
 
 **Links**  
 [LinkedIn](https://www.linkedin.com/in/ezhu03/) · [GitHub](https://github.com/ezhu03) · [Email](mailto:ejzhu@usc.edu) · [Resume PDF](assets/files/Eric_Zhu_Resume.pdf) · [CV PDF](assets/files/Eric_Zhu_CV.pdf)
