--- a/index.html
+++ b/index.html
@@ -68,6 +68,16 @@
     }
 
     /* ===== Playful styling for About & Projects only (not Resume) ===== */
+    /* ===== Resume (uniform professional style) ===== */
+    #resume .md{color:#2b3a4a}
+    #resume .md h2{margin-top:0}
+    #resume .md h3{font-size:1.05rem;margin:14px 0 6px 0;color:#1f2a37}
+    #resume .md p{margin:8px 0}
+    #resume .md ul{list-style:none;padding-left:1rem;margin:10px 0}
+    #resume .md li{position:relative;margin:6px 0;padding-left:.6rem}
+    #resume .md li::before{content:"•";position:absolute;left:-.6rem;top:0;color:var(--accent);font-weight:700}
+    #resume .md em{color:#3b4a5a}
+    #resume .md a{padding:0;border:none;background:transparent}
     .playful .md h1,
     .playful .md h2 { position: relative; display: inline-block }
     .playful .md h1::after,
@@ -225,45 +235,43 @@ Lightweight pipeline to **seed brackets**, compute **ELO deltas**, and summarize
   </script>
 
   <script type="text/markdown" id="resume-src">
-**Education**  
-- **University of Southern California (USC),** M.S. Computer Science — *Aug 2025–May 2027*  
-- **UC Santa Barbara (CCS),** B.S. Physics — *High Honors; Minor in Statistics & Data Science; GPA 3.93/4.0*
+**Education**
+- **University of Southern California (USC)** — M.S. Computer Science *(Aug 2025–May 2027)*
+- **UC Santa Barbara (CCS)** — B.S. Physics *(High Honors; Minor in Statistics & Data Science; GPA 3.93/4.0)*
 
-**Experience**  
-- **Computational Biophysics Researcher — Streichan Lab** *(Mar 2022–Jun 2025)*  
-  Built Python pipelines to process **large‑scale zebrafish tracking data** (trajectory extraction, velocity/spatial analysis, stats). Automated **microscope/camera** workflows with Python + **PycroManager** to increase imaging throughput. Applied **ML‑based tracking** (idtracker.ai) and validated **physics‑informed models** (Markov, Brownian, probabilistic turning, reflection‑guided) against experiments. Produced figures & reports; collaborated closely with faculty and grads.  
-  *Recognition:* **Dean’s Physics Fellow (2023)**; **Honors Senior Thesis (2024–2025)**.
+**Experience**
+- **Computational Biophysics Researcher — Streichan Lab** *(Mar 2022–Jun 2025)*
+  - Built Python pipelines for **large‑scale zebrafish tracking data** (trajectory extraction, velocity/spatial analysis, stats).
+  - Automated **microscope/camera** workflows with Python + **PycroManager** to increase imaging throughput.
+  - Applied **ML‑based tracking** (idtracker.ai) and validated **physics‑informed models** (Markov, Brownian, probabilistic turning, reflection‑guided) against experiments.
+  - Produced publication‑ready figures & reports; collaborated closely with faculty and graduate students.
+  - *Recognition:* **Dean’s Physics Fellow (2023)**; **Honors Senior Thesis (2024–2025)**.
 
-- **Student Researcher — Research Mentorship Program** *(Jun 2020–Aug 2020)*  
-  Swift **ARKit** prototype delivering **haptic feedback** for object recognition; user survey; 15‑minute talk to ~200 attendees.
+- **Student Researcher — Research Mentorship Program** *(Jun 2020–Aug 2020)*
+  - Prototyped a Swift **ARKit** app delivering **haptic feedback** for object recognition.
+  - Ran a small user survey and presented a 15‑minute talk to ~200 attendees.
 
-**Leadership & Service**  
-- **President, Acts2Fellowship** *(Jun 2023–Present)* — Led programming for **100+** members; organized Welcome Week reaching **1,000+** participants; mentored student leaders; emceed for **200+** attendees.  
-- **Lead Audio Engineer** *(Jun 2022–Present)* — Coordinated live audio for events (60–300+ ppl); trained 5 new members weekly; ensured consistent sound quality.
+**Leadership & Service**
+- **President, Acts2Fellowship** *(Jun 2023–Present)* — Led programming for **100+** members; organized Welcome Week reaching **1,000+** participants; mentored student leaders; emceed for **200+** attendees.
+- **Lead Audio Engineer** *(Jun 2022–Present)* — Coordinated live audio for events (60–300+ ppl); trained 5 new members weekly; maintained consistent sound quality.
 
-**Outreach & Mentorship**  
-Anchor Youth Ministry — **STEAM Camp Counselor / TA** *(Summer 2024, 2025)*  
-Lompoc Unified School District — **Physics Outreach Instructor Aide** *(2022–Present)*  
-Acts2Fellowship — **Gauchoback 1‑on‑1 Mentor** *(2023–Present)*  
-Friends of Children with Special Needs — **Lead CS Instructor** *(2016–2021)*
+**Outreach & Mentorship**
+- Anchor Youth Ministry — **STEAM Camp Counselor / TA** *(Summer 2024, 2025)*
+- Lompoc Unified School District — **Physics Outreach Instructor Aide** *(2022–Present)*
+- Acts2Fellowship — **Gauchoback 1‑on‑1 Mentor** *(2023–Present)*
+- Friends of Children with Special Needs — **Lead CS Instructor** *(2016–2021)*
 
-**Honors & Awards**  
-Dean’s Physics Fellow (Summer Undergraduate Research Fellowship, 2023)  
-College of Creative Studies Honors (2021–2025)
+**Honors & Awards**
+- Dean’s Physics Fellow (Summer Undergraduate Research Fellowship, 2023)
+- College of Creative Studies Honors (2021–2025)
 
-**Skills**  
-Python, Java, C/C++, R, MATLAB, SQL, Swift, HTML/CSS, LaTeX, Git/GitHub, Jupyter, Linux/Unix; NumPy, Pandas, Matplotlib, Seaborn, scikit‑learn, TensorFlow/PyTorch; Neural Networks; Data Analysis & Visualization; Image Processing; Experimental Design; Microscopy.
-
-**Technical Overview**  
-- **Languages/Tools:** Python, Java, C/C++, R, MATLAB, SQL, Swift, Linux/Unix, Git/GitHub  
-- **Data/ML:** NumPy, Pandas, Matplotlib, Seaborn, scikit‑learn, TensorFlow/PyTorch  
-- **Methods:** Experimental design, image processing, tracking, statistical modeling, simulations, dashboards  
-- **Links:** [LinkedIn](https://www.linkedin.com/in/ezhu03/) · [GitHub](https://github.com/ezhu03) · [Email](mailto:ejzhu@usc.edu)
+**Skills**
+- **Languages/Tools:** Python, Java, C/C++, R, MATLAB, SQL, Swift, HTML/CSS, LaTeX, Git/GitHub, Jupyter, Linux/Unix
+- **Data/ML:** NumPy, Pandas, Matplotlib, Seaborn, scikit‑learn, TensorFlow/PyTorch, Neural Networks
+- **Methods:** Experimental design, image processing, tracking, statistical modeling, simulations, dashboards
 
 **Links**  
 [LinkedIn](https://www.linkedin.com/in/ezhu03/) · [GitHub](https://github.com/ezhu03) · [Email](mailto:ejzhu@usc.edu) · [Resume PDF](assets/files/Eric_Zhu_Resume.pdf) · [CV PDF](assets/files/Eric_Zhu_CV.pdf)
-
-> Keep your PDFs in `assets/files/` and swap filenames without changing the page.
   </script>
 
   <!-- Lightweight Markdown parser (headings, bold/italic, links, images, lists, code) -->
