--- a/index.html
+++ b/index.html
@@ -118,11 +118,17 @@
     }
 
   /* ===== Mouse interactivity ===== */
-  /* Custom cursor dot + soft trailing ring (desktop only) */
+  /* Custom cursor: fish shape + ripple wake (desktop only) */
   @media (hover: hover) and (pointer: fine){
-    #cursor{position:fixed;top:0;left:0;width:14px;height:14px;margin:-7px 0 0 -7px;border-radius:50%;background:var(--accent);opacity:.18;mix-blend-mode:multiply;pointer-events:none;z-index:1000;box-shadow:0 0 24px rgba(43,106,255,.35),0 0 60px rgba(43,106,255,.15);filter:blur(0.2px);transform:translate3d(-100px,-100px,0)}
+    body{cursor:none}
+    #cursor{position:fixed;top:0;left:0;width:26px;height:14px;margin:-7px 0 0 -7px;border-radius:18px 20px 20px 18px;background:linear-gradient(90deg, rgba(255,255,255,.85), var(--accent));opacity:.95;mix-blend-mode:multiply;pointer-events:none;z-index:1000;box-shadow:0 4px 18px rgba(43,106,255,.35);transform:translate3d(-100px,-100px,0) rotate(0deg)}
+    #cursor::before{content:"";position:absolute;left:-9px;top:50%;width:12px;height:10px;transform:translateY(-50%) rotate(18deg);background:var(--accent);clip-path:polygon(0 50%,100% 0,100% 100%);opacity:.75}
+    #cursor::after{content:"";position:absolute;right:4px;top:4px;width:3px;height:3px;background:rgba(17,17,17,.7);border-radius:50%}
     #cursor-ring{position:fixed;top:0;left:0;width:38px;height:38px;margin:-19px 0 0 -19px;border-radius:50%;border:2px solid rgba(43,106,255,.35);background:transparent;pointer-events:none;z-index:999;mix-blend-mode:multiply;opacity:.65;transform:translate3d(-100px,-100px,0)}
     #cursor-ring.shrink{transform:translate3d(var(--x, -100px), var(--y, -100px), 0) scale(.85);opacity:.9;border-color:rgba(43,106,255,.6)}
+    #wake{position:fixed;inset:0;pointer-events:none;z-index:998}
+    .wake-dot{position:absolute;width:10px;height:10px;border:2px solid rgba(43,106,255,.35);border-radius:50%;transform:translate(-50%,-50%) scale(1);opacity:.8;animation:wake .9s ease-out forwards}
+    @keyframes wake{to{transform:translate(-50%,-50%) scale(2.4);opacity:0}}
   }
   /* Spotlight that follows mouse (only on playful sections) */
   #spotlight{position:fixed;inset:0;pointer-events:none;z-index:5;opacity:0;transition:opacity .2s ease}
@@ -143,6 +149,7 @@
 <body>
   <div id="cursor" aria-hidden="true"></div>
   <div id="cursor-ring" aria-hidden="true"></div>
+  <div id="wake" aria-hidden="true"></div>
   <div id="spotlight" aria-hidden="true"></div>
   <header>
     <div class="nav">
@@ -336,30 +343,48 @@ Lightweight pipeline to **seed brackets**, compute **ELO deltas**, and summarize
         const fine = window.matchMedia('(hover:hover) and (pointer:fine)').matches;
         if(!fine) return; // skip on touch devices
 
-        // 1) Cursor dot + trailing ring with eased springy motion
+        // 1) Fish cursor with eased motion + ripple wake
         const cursor = document.getElementById('cursor');
         const ring = document.getElementById('cursor-ring');
-        let cx=-100, cy=-100, tx=-100, ty=-100;   // dot: current & target
-        let rx=-100, ry=-100;                     // ring: current
+        const wake = document.getElementById('wake');
+        // hide the old ring (we'll use wake ripples instead)
+        if (ring) ring.style.display = 'none';
+
+        let cx=-100, cy=-100, tx=-100, ty=-100;   // fish position (current/target)
+        let lastX=cx, lastY=cy;                   // for angle + ripple spacing
+        let rippleDistAcc = 0;                    // accumulate distance for throttling ripples
+
+        function makeRipple(x,y){
+          const s = document.createElement('span');
+          s.className = 'wake-dot';
+          s.style.left = x + 'px';
+          s.style.top  = y + 'px';
+          wake.appendChild(s);
+          setTimeout(()=> s.remove(), 950);
+        }
 
         function loop(){
-          // dot follows faster
+          // ease toward target (slightly springy)
           cx += (tx - cx)*0.22; cy += (ty - cy)*0.22;
-          cursor.style.transform = `translate3d(${cx}px,${cy}px,0)`;
-          // ring follows slower for a playful lag
-          rx += (tx - rx)*0.10; ry += (ty - ry)*0.10;
-          ring.style.transform = `translate3d(${rx}px,${ry}px,0)`;
+
+          // compute heading based on movement
+          const dx = cx - lastX, dy = cy - lastY;
+          const speed = Math.hypot(dx,dy);
+          const angle = Math.atan2(dy, dx) * 180/Math.PI; // degrees
+          cursor.style.transform = `translate3d(${cx}px,${cy}px,0) rotate(${angle}deg)`;
+
+          // create ripples along the path every ~12px moved
+          rippleDistAcc += speed;
+          if (rippleDistAcc > 12){
+            rippleDistAcc = 0;
+            makeRipple(lastX, lastY);
+          }
+
+          lastX = cx; lastY = cy;
           requestAnimationFrame(loop);
         }
         window.addEventListener('mousemove', (e)=>{ tx=e.clientX; ty=e.clientY; });
         requestAnimationFrame(loop);
-
-        // scale the ring a bit over interactive elements
-        const hoverables = document.querySelectorAll('a, button, [role="button"], .card, img');
-        hoverables.forEach(el=>{
-          el.addEventListener('mouseenter', ()=> ring.classList.add('shrink'));
-          el.addEventListener('mouseleave', ()=> ring.classList.remove('shrink'));
-        });
 
         // 2) Spotlight: radial gradient under the cursor that only shows over playful sections
         const spot = document.getElementById('spotlight');
