--- a/index.html
+++ b/index.html
@@ -121,14 +121,16 @@
   /* Custom cursor: fish shape + ripple wake (desktop only) */
   @media (hover: hover) and (pointer: fine){
     body{cursor:none}
-    #cursor{position:fixed;top:0;left:0;width:26px;height:14px;margin:-7px 0 0 -7px;border-radius:18px 20px 20px 18px;background:linear-gradient(90deg, rgba(255,255,255,.85), var(--accent));opacity:.95;mix-blend-mode:multiply;pointer-events:none;z-index:1000;box-shadow:0 4px 18px rgba(43,106,255,.35);transform:translate3d(-100px,-100px,0) rotate(0deg)}
+    #cursor{position:fixed;top:0;left:0;width:34px;height:18px;margin:-9px 0 0 -9px;border-radius:22px 24px 24px 22px;background:linear-gradient(90deg, rgba(255,255,255,.85), var(--accent));opacity:.95;mix-blend-mode:multiply;pointer-events:none;z-index:1000;box-shadow:0 4px 18px rgba(43,106,255,.35);transform:translate3d(-100px,-100px,0) rotate(0deg)}
     #cursor::before{content:"";position:absolute;left:-9px;top:50%;width:12px;height:10px;transform:translateY(-50%) rotate(18deg);background:var(--accent);clip-path:polygon(0 50%,100% 0,100% 100%);opacity:.75}
     #cursor::after{content:"";position:absolute;right:4px;top:4px;width:3px;height:3px;background:rgba(17,17,17,.7);border-radius:50%}
     #cursor-ring{position:fixed;top:0;left:0;width:38px;height:38px;margin:-19px 0 0 -19px;border-radius:50%;border:2px solid rgba(43,106,255,.35);background:transparent;pointer-events:none;z-index:999;mix-blend-mode:multiply;opacity:.65;transform:translate3d(-100px,-100px,0)}
     #cursor-ring.shrink{transform:translate3d(var(--x, -100px), var(--y, -100px), 0) scale(.85);opacity:.9;border-color:rgba(43,106,255,.6)}
     #wake{position:fixed;inset:0;pointer-events:none;z-index:998}
-    .wake-dot{position:absolute;width:10px;height:10px;border:2px solid rgba(43,106,255,.35);border-radius:50%;transform:translate(-50%,-50%) scale(1);opacity:.8;animation:wake .9s ease-out forwards}
-    @keyframes wake{to{transform:translate(-50%,-50%) scale(2.4);opacity:0}}
+    .wake-dot{position:absolute;width:var(--w,16px);height:var(--h,16px);border:2px solid rgba(43,106,255,.32);border-radius:50%;transform:translate(-50%,-50%) scale(1);opacity:.85;animation:wake var(--dur,1.2s) cubic-bezier(.17,.67,.22,1) forwards;will-change: transform, opacity}
+    @keyframes wake{to{transform:translate(-50%,-50%) scale(var(--scale,3.2));opacity:0}}
+    .click-wave{position:absolute;width:var(--w,12px);height:var(--h,12px);border:2px solid rgba(43,106,255,.38);border-radius:50%;transform:translate(-50%,-50%) scale(1);opacity:.9;animation:wave var(--dur,1.1s) ease-out forwards;mix-blend-mode:multiply;will-change: transform, opacity}
+    @keyframes wave{to{transform:translate(-50%,-50%) scale(var(--scale,6));opacity:0}}
   }
   /* Spotlight that follows mouse (only on playful sections) */
   #spotlight{position:fixed;inset:0;pointer-events:none;z-index:5;opacity:0;transition:opacity .2s ease}
@@ -354,13 +356,23 @@ Lightweight pipeline to **seed brackets**, compute **ELO deltas**, and summarize
         let lastX=cx, lastY=cy;                   // for angle + ripple spacing
         let rippleDistAcc = 0;                    // accumulate distance for throttling ripples
 
-        function makeRipple(x,y){
+        function makeRipple(x,y, speed){
           const s = document.createElement('span');
           s.className = 'wake-dot';
+          // Physics‑inspired parameters: larger & longer ripples at higher speed, with damping
+          // Map speed (px/frame) to [0,1]
+          const v = Math.min(speed/18, 1);
+          const scale = 3.2 + 1.4*v;          // 3.2..4.6
+          const dur   = 1.0 + 0.6*v;          // 1.0s..1.6s
+          const size  = 14 + Math.round(10*v);// 14..24 px
+          s.style.setProperty('--scale', scale);
+          s.style.setProperty('--dur', dur + 's');
+          s.style.setProperty('--w', size + 'px');
+          s.style.setProperty('--h', size + 'px');
           s.style.left = x + 'px';
           s.style.top  = y + 'px';
           wake.appendChild(s);
-          setTimeout(()=> s.remove(), 950);
+          setTimeout(()=> s.remove(), (dur*1000)+200);
         }
 
         function loop(){
@@ -373,11 +385,13 @@ Lightweight pipeline to **seed brackets**, compute **ELO deltas**, and summarize
           const angle = Math.atan2(dy, dx) * 180/Math.PI; // degrees
           cursor.style.transform = `translate3d(${cx}px,${cy}px,0) rotate(${angle}deg)`;
 
-          // create ripples along the path every ~12px moved
+          // Emit less frequent ripples that get larger with speed
           rippleDistAcc += speed;
-          if (rippleDistAcc > 12){
+          // emitEvery grows from ~26px (slow) to ~42px (fast), so fewer ripples overall
+          const emitEvery = 26 + 16*Math.min(speed/18, 1);
+          if (rippleDistAcc > emitEvery){
             rippleDistAcc = 0;
-            makeRipple(lastX, lastY);
+            makeRipple(lastX, lastY, speed);
           }
 
           lastX = cx; lastY = cy;
@@ -385,6 +399,35 @@ Lightweight pipeline to **seed brackets**, compute **ELO deltas**, and summarize
         }
         window.addEventListener('mousemove', (e)=>{ tx=e.clientX; ty=e.clientY; });
         requestAnimationFrame(loop);
+
+        // Click ripples: damped radial waves using CSS variables
+        document.addEventListener('click', (e)=>{
+          const x = e.clientX, y = e.clientY;
+          // Create 3 waves with increasing scale and duration, like expanding circles with damping
+          const waves = [
+            {delay: 0,    scale: 5.5, dur: 0.9},
+            {delay: 90,   scale: 7.0, dur: 1.2},
+            {delay: 180,  scale: 8.5, dur: 1.5}
+          ];
+          waves.forEach(w=>{
+            setTimeout(()=>{
+              const ring = document.createElement('span');
+              ring.className = 'click-wave';
+              ring.style.left = x + 'px';
+              ring.style.top  = y + 'px';
+              // Slightly larger starting size when moving faster (adds a momentum feel)
+              const v = Math.min(Math.hypot(tx-cx, ty-cy)/18, 1);
+              const size = 12 + Math.round(10*v);
+              ring.style.setProperty('--w', size + 'px');
+              ring.style.setProperty('--h', size + 'px');
+              ring.style.setProperty('--scale', w.scale + (0.8*v));
+              // Damped waves: longer duration for larger rings
+              ring.style.setProperty('--dur', w.dur + 's');
+              wake.appendChild(ring);
+              setTimeout(()=> ring.remove(), (w.dur*1000)+200);
+            }, w.delay);
+          });
+        }, {passive:true});
 
         // 2) Spotlight: radial gradient under the cursor that only shows over playful sections
         const spot = document.getElementById('spotlight');
